@@ -23,6 +23,8 @@
     <File name="./src/ServiceLocator.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/ComplexMenuItem.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/GiverMenuItem.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/PayloadInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/ReceivingHandler.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="avahi-sharp, Version=1.0.0.0, Culture=neutral, PublicKeyToken=4d116c78973743f5" />
